--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,19 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
-    }
+    { "src": "index.js", "use": "@vercel/node" },
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
     {
       "src": "/webhook",
-      "dest": "index.js",
-      "methods": ["POST"]
+      "methods": ["POST"],
+      "dest": "index.js"
     },
     {
       "src": "/logs",
-      "dest": "index.js",
-      "methods": ["GET"]
+      "methods": ["GET"],
+      "dest": "index.js"
     },
     {
       "src": "/(.*)",
