Update vercel.json with build and install commands
Removed existing build and route configurations and added build and install commands.

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
-// vercel.json  ⟵ overwrite your existing file
 {
   "version": 2,
-  "builds": [
-    { "src": "index.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/webhook", "methods": ["POST"], "dest": "/index.js" },
-    { "src": "/logs",    "methods": ["GET"],  "dest": "/index.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
-  ]
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install"
 }
