Fix formatting of engines section in package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
-"engines": { "node": "20.x" }
-
