--- a/package.json
+++ b/package.json
@@ -17,3 +17,8 @@
     "node": "20.x"
   }
 }
+"scripts": {
+  "start": "node index.js",
+  "dev": "nodemon index.js",
+  "build": "echo 'No build needed'"
+}
