--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
-"scripts": {
-  "start": "node index.js",
-  "dev": "nodemon index.js",
-  "build": "echo 'No build needed'"
+{
+  "name": "telegram-m3u-bot",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "echo 'No build needed'"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.1",
+    "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": "20.x"
+  }
 }
