--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "echo 'No build needed'"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
